--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
 <body>
 <script>
     System.import('systemjs-hmr/dist/next')
-            .then(() => System.import('app/app.js'))
+    System.import('app/app.js')
 </script>
 </body>
 </html>
