Introduced functional style for better testing

--- a/test/default/index.html
+++ b/test/default/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>HMR - Experimental Testing</title>
-    <script src="node_modules/systemjs/dist/system.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="jspm.config.js"></script>
 </head>
 <body>
